local-k8s/infra-manifests/cadvisor.yaml

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cadvisor
spec:
  selector:
    matchLabels:
      app: cadvisor
  template:
    metadata:
      labels:
        app: cadvisor
    spec:
      containers:
        - name: cadvisor
          image: gcr.io/cadvisor/cadvisor:v0.49.2
          ports:
            - containerPort: 8080
          securityContext:
            privileged: true
          volumeMounts:
            - name: rootfs
              mountPath: /rootfs
              readOnly: true
            - name: docker-sock
              mountPath: /var/run/docker.sock
              readOnly: true
            - name: sys
              mountPath: /sys
              readOnly: true
            - name: var-lib-docker
              mountPath: /var/lib/docker
              readOnly: true
            - name: dev-disk
              mountPath: /dev/disk
              readOnly: true
          args:
            - --profiling
            - --housekeeping_interval=10s
            - --docker_only=true
            - --disable_metrics=disk,percpu,sched,process
            # All metrics: advtcp,app,cpu,cpuLoad,cpu_topology,cpuset,disk,diskIO,hugetlb,memory,memory_numa,network,oom_event,percpu,perf_event,process,referenced_memory,resctrl,sched,tcp,udp
            # You want to disable as many irrelevant metrics as you can to reduce cAdvisor overhead
      volumes:
        - name: rootfs
          hostPath:
            path: /
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
        - name: sys
          hostPath:
            path: /sys
        - name: var-lib-docker
          hostPath:
            path: /var/lib/docker/
        - name: dev-disk
          hostPath:
            path: /dev/disk/
---
apiVersion: v1
kind: Service
metadata:
  name: cadvisor
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: cadvisor
