local-k8s/infra-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /prometheus(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
          - path: /grafana(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8004
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8003
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8002
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8001
          # NOTE: this is not necessary and only needed for testing
          - path: /cadvisor(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cadvisor-service
                port:
                  number: 8080
